Make sure the spinner buttons are correctly aligned

--- a/components/input/theme.css
+++ b/components/input/theme.css
@@ -247,10 +247,11 @@
 }
 
 .spinner {
+  align-items: center;
   display: flex;
   flex-direction: column;
   height: var(--input-height-medium);
-  margin-left: -1px;
+  justify-content: center;
   width: var(--spinner-width);
 }
 
